--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-- add MSI support (software)
-- recode FTDI software
+- add MSI software support
+- cleanup FTDI software (only working on windows, would be better to have linux only or if possible linux/windows)
+- add examples
